# crec

./: .gitignore  LICENSE.txt  README.html  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
crec/: __init__.py  api.py  collection.py  constants.py  document.py  downloader.py  granule.py  logger.py  package.py  paragraph.py  parse.py  passage.py  record.py  speaker.py  text.py  text_collection.py  xml_parser.py
crec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crec/data/CREC-2018-01-04/: dip.xml  mods.xml  premis.xml
crec/data/CREC-2018-01-04/html/: CREC-2018-01-04-pt1-PgD7-2.htm  CREC-2018-01-04-pt1-PgD7-3.htm  CREC-2018-01-04-pt1-PgD7-4.htm  CREC-2018-01-04-pt1-PgD7-5.htm  CREC-2018-01-04-pt1-PgD7-6.htm  CREC-2018-01-04-pt1-PgD7.htm  CREC-2018-01-04-pt1-PgS-FrontMatter.htm  CREC-2018-01-04-pt1-PgS27-2.htm  CREC-2018-01-04-pt1-PgS27-3.htm  CREC-2018-01-04-pt1-PgS27-4.htm  CREC-2018-01-04-pt1-PgS27-5.htm  CREC-2018-01-04-pt1-PgS27-6.htm  CREC-2018-01-04-pt1-PgS27-7.htm  CREC-2018-01-04-pt1-PgS27-8.htm  CREC-2018-01-04-pt1-PgS28-2.htm  CREC-2018-01-04-pt1-PgS28-3.htm  CREC-2018-01-04-pt1-PgS28.htm  CREC-2018-01-04-pt1-PgS29-2.htm  CREC-2018-01-04-pt1-PgS29-3.htm  CREC-2018-01-04-pt1-PgS29-4.htm  CREC-2018-01-04-pt1-PgS29.htm  CREC-2018-01-04-pt1-PgS30.htm  CREC-2018-01-04-pt1-PgS31.htm  CREC-2018-01-04-pt1-PgS32.htm  CREC-2018-01-04-pt1-PgS33-2.htm  (+28 more)
data/: get_116.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
test/: test.py  test_api.py  test_record.py  test_text.py
testing/: test.py  validate_paragraphs.py
tests/: test.py
