[project]
name = "censaurus"
version = "0.1.1.2"
dynamic = ["dependencies"]
authors = [
  {name="Ethan Singer", email="singerep@bu.edu"},
]
description = "a python tool built for retrieving, structuring, and enriching the Congressional Record, the official record of the proceedings of the United States Congress. crec wraps the GovInfo API — a product of the U.S. Government Publishing Office — with an intuitive and powerful API of its own."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['crec']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/singerep/crec"
"Documentation" = "https://crec.readthedocs.io/en/latest/"
"Issues" = "https://github.com/singerep/crec/issues"